--- a/_layout/masthead.html
+++ b/_layout/masthead.html
@@ -7,7 +7,7 @@
           <li class="masthead__menu-item"><a href="/profile" >About Me</a></li>
           <li class="masthead__menu-item"><a href="/research" >Research</a></li>
           <li class="masthead__menu-item"><a href="/publications" >Publications</a></li>
-          <!-- <li class="masthead__menu-item"><a href="/notes" >Notes</a></li> -->
+          <li class="masthead__menu-item"><a href="/notes" >Notes</a></li>
           <!-- <li class="masthead__menu-item"><a href="/lecture" >Seminar/Lecture</a></li> -->
         </ul>
         <button class="greedy-nav__toggle hidden" type="button">
