def, note, etc were defined for admonition

--- a/_css/franklin.css
+++ b/_css/franklin.css
@@ -336,3 +336,65 @@ code {
   border-radius: 0 10px 10px 0;
   border-left: 5px solid #4c9cf1;
 }
+
+/* ===============
+For admonition
+=============== */
+.admonition {
+  margin-top: 1.5em;
+  width: 100%;
+  margin-left:auto;
+  margin-right:auto;
+  background-color:  aliceblue;
+  border-radius: 5px;
+  margin-bottom: 1em;
+}
+
+.admonition .note {
+
+}
+
+.admonition .note .content {
+  padding: 10px;
+  padding-left: 12px;
+}
+
+.admonition .note .title{
+  font-size: 105%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding-left: 7px;
+  padding-top: 2px;
+  color: white;
+  background: red;
+}
+
+.admonition .def .content {
+  padding: 10px;
+  padding-left: 12px;
+}
+
+.admonition .def .title{
+  font-size: 105%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding-left: 7px;
+  padding-top: 2px;
+  color: white;
+  background: orange;
+}
+
+.admonition .key .content {
+  padding: 10px;
+  padding-left: 12px;
+}
+
+.admonition .key .title{
+  font-size: 105%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding-left: 7px;
+  padding-top: 2px;
+  color: white;
+  background: cornflowerblue;
+}
