--- a/_layout/body_layout.html
+++ b/_layout/body_layout.html
@@ -15,13 +15,13 @@
           <div class="author__urls-wrapper">
             <button class="btn btn--inverse">Follow</button>
             <ul class="author__urls social-icons">
-              <li itemprop="homeLocation" itemscope itemtype="https://schema.org/Place">
-                <i class="fas fa-fw fa-map-marker-alt" aria-hidden="true"></i> <span itemprop="name">Tokyo, Japan</span></li>
+              <li><a href="mailto:s-iida@protein.osaka-u.ac.jp" rel="nofollow noopener noreferrer"><img src="/assets/mailicon.png" alt="email" style="width: 1vw; min-width: 20px;"></i> Email</a></li>
+              <!-- <li itemprop="homeLocation" itemscope itemtype="https://schema.org/Place">
+                <i class="fas fa-fw fa-map-marker-alt" aria-hidden="true"></i> <span itemprop="name">Tokyo, Japan</span></li> -->
               <li><a href="https://github.com/physicshinzui" rel="nofollow noopener noreferrer"><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a></li>
               <li><a href="https://scholar.google.co.jp/citations?user=p09KwG8AAAAJ&hl=en" rel="nofollow noopener noreferrer"><img src="/assets/google-scholar.png" alt="gscholar" style="width: 1vw; min-width: 15px;"></i> Google Scholar</a></li>
               <li><a href="https://twitter.com/_siida_" rel="nofollow noopener noreferrer"><img src="/assets/icons8-twitter.svg" alt="twitter" style="width: 1vw; min-width: 20px;"></i> Twitter </a></li>
               <li><a href="https://hub.docker.com/u/shinjiiida" rel="nofollow noopener noreferrer"><img src="/assets/Moby-logo.png" alt="docker" style="width: 1vw; min-width: 20px;"></i> DockerHub </a></li>
-
             </ul>
           </div>
         </div>
