twitter timeline and follow button were added.

--- a/_layout/body_layout.html
+++ b/_layout/body_layout.html
@@ -10,6 +10,7 @@
           </div>
           <div class="author__content">
             <h3 class="author__name" itemprop="name">Shinji Iida</h3>
+            <a href="https://twitter.com/_siida_?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @_siida_</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             <p class="author__bio" itemprop="description">Postdoctral Researcher. Petit à petit, je fais mon nid.</p>
           </div>
           <div class="author__urls-wrapper">
@@ -22,6 +23,7 @@
               <li><a href="https://scholar.google.co.jp/citations?user=p09KwG8AAAAJ&hl=en" rel="nofollow noopener noreferrer"><img src="/assets/google-scholar.png" alt="gscholar" style="width: 1vw; min-width: 15px;"></i> Google Scholar</a></li>
               <li><a href="https://twitter.com/_siida_" rel="nofollow noopener noreferrer"><img src="/assets/icons8-twitter.svg" alt="twitter" style="width: 1vw; min-width: 20px;"></i> Twitter </a></li>
               <li><a href="https://hub.docker.com/u/shinjiiida" rel="nofollow noopener noreferrer"><img src="/assets/Moby-logo.png" alt="docker" style="width: 1vw; min-width: 20px;"></i> DockerHub </a></li>
+              <a class="twitter-timeline" href="https://twitter.com/_siida_?ref_src=twsrc%5Etfw">Tweets by _siida_</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </ul>
           </div>
         </div>
