Added lines for google analtics, which should be correct.

--- a/_layout/head.html
+++ b/_layout/head.html
@@ -14,9 +14,17 @@
   {{insert style.html}}
   {{isdef title}} <title>{{fill title}}</title>  {{end}}
   <!-- end custom head snippets -->
-  
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154771635-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-154771635-1');
+  </script>
+  
 </head>
 {{insert body_layout.html}}
 
