--- a/_layout/page_foot.html
+++ b/_layout/page_foot.html
@@ -4,3 +4,11 @@
     Written by {{ fill author }}. Last modified: {{ fill fd_mtime }}
   </div>
 </div>
+<script src="https://utteranc.es/client.js"
+        repo="physicshinzui/physicshinzui.github.io"
+        issue-term="pathname"
+        label="✨💬✨"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
