--- a/_layout/body_layout.html
+++ b/_layout/body_layout.html
@@ -13,8 +13,9 @@
             <img src="/assets/me_sherlock1mb.jpeg" alt="siida" itemprop="image">
           </div>
           <div class="author__content">
-            <!-- <h3 class="author__name" itemprop="name">Shinji Iida</h3>
-            <a href="https://twitter.com/messages/compose?recipient_id=1372514325085057025"class="twitter-dm-button" data-screen-name="@_siida_"> Message @_siida_</a> -->
+            <h3 class="author__name" itemprop="name">Shinji Iida</h3>
+
+            <!-- <a href="https://twitter.com/messages/compose?recipient_id=1372514325085057025"class="twitter-dm-button" data-screen-name="@_siida_"> Message @_siida_</a>  -->
 
             <p class="author__bio" itemprop="description">Postdoctral researcher in computational biophysics. Petit à petit, je fais mon nid.</p>
 
@@ -23,7 +24,7 @@
             <button class="btn btn--inverse">Follow</button>
             <ul class="author__urls social-icons">
 
-              <li><a href="mailto:s-iida@protein.osaka-u.ac.jp" rel="nofollow noopener noreferrer"><img src="/assets/mailicon.png" alt="email" style="width: 1vw; min-width: 20px;"></i> Email</a></li>
+              <li><a href="mailto:shinji@s-iida.com" rel="nofollow noopener noreferrer"><img src="/assets/mailicon.png" alt="email" style="width: 1vw; min-width: 20px;"></i> Email</a></li>
               <li><a href="https://github.com/physicshinzui" rel="nofollow noopener noreferrer"><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a></li>
               <li><a href="https://scholar.google.co.jp/citations?user=p09KwG8AAAAJ&hl=en" rel="nofollow noopener noreferrer"><img src="/assets/google-scholar.png" alt="gscholar" style="width: 1vw; min-width: 15px;"></i> Google Scholar</a></li>
               <li><a href="https://twitter.com/_siida_" rel="nofollow noopener noreferrer"><img src="/assets/icons8-twitter.svg" alt="twitter" style="width: 1vw; min-width: 20px;"></i> Twitter </a></li>
