Update: left column

--- a/_layout/body_layout.html
+++ b/_layout/body_layout.html
@@ -17,7 +17,7 @@
 
             <!-- <a href="https://twitter.com/messages/compose?recipient_id=1372514325085057025"class="twitter-dm-button" data-screen-name="@_siida_"> Message @_siida_</a>  -->
 
-            <p class="author__bio" itemprop="description">Postdoctral researcher in computational biophysics. Petit à petit, je fais mon nid.</p>
+            <p class="author__bio" itemprop="description"> Researcher in computational biophysics. </p>
 
           </div>
           <div class="author__urls-wrapper">
