lower profile image resolution.

--- a/_layout/body_layout.html
+++ b/_layout/body_layout.html
@@ -11,7 +11,7 @@
           <div class="author__avatar">
             <!-- <img src="/assets/me.jpeg" alt="siida" itemprop="image"> -->
             <!-- img src="/assets/me_sherlock1mb.jpeg" alt="siida" itemprop="image"> --> 
-            <img src="/assets/IMG_3089.png" alt="siida" itemprop="image">
+            <img src="/assets/IMG_3089.jpg" alt="siida" itemprop="image">
           </div>
           <div class="author__content">
             <h3 class="author__name" itemprop="name">Shinji Iida</h3>
